                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)

 - 22-08-2006 added: SmartXX v3 and OPX full RGB PWM control (http://www.xboxmediacenter.com/wiki/index.php?title=List_of_Built_In_Functions)
                     BuildIn Command: XBMC.system.pwmcontrol(#rrggbb,#rrggbb,action,time)
                     e.g.: blink Blue <onclick>XBMC.system.pwmcontrol(#0000FF,#000000,blink,100)</onclick>
		     Thanks to www.freakware.com for sponsoring some SmartXX v3
 - 22-08-2006 added: popup informations if xbox memory units are detected
 - 22-08-2006 added: XBOX Autodetection now creates a Virtual ftp share on sucessfull detection
 - 22-08-2006 removed: Settings, XBOX autodetection Createlink, no longer needed
 - 22-08-2006 fixed: [ 1476262 ] System Info error while playing music
 - 22-08-2006 added: Systeminfo: display Memunit information
 - 22-08-2006 added: HDD S.M.A.R.T Requesting to InfoManager (atm. only HDD Temperature is Tested)
                     Request String: System.HDDsmart(17) http://www.xboxmediacenter.com/wiki/index.php?title=InfoLabels#Labels_Available_In_XBMC
 - 22-08-2006 added: B as Back in media windows (and elsewhere).  Thanks to Markeen.
 - 22-08-2006 changed: Stretch 14:9 zooms additionally so that black bars are eliminated.
 - 22-08-2006 fixed: Random highlighted items when entering folders for the first time.
 - 22-08-2006 changed: Slightly faster video database lookup of video settings.
 - 22-08-2006 changed: Improved filtering of filenames prior to IMDb lookup, thanks to ezd
 - 22-08-2006 changed: Better support for xbox memory units.
 - 22-08-2006 fixed: "hide media extensions" works on virtual folders like playlists, archives, etc.